<resources>
    <string name="app_name">Кабинет старосты СФУ</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Логин</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_sign_in_short">Войти</string>
    <string name="error_invalid_email">У Вас нет прав для доступа в Кабинет Старосты</string>
    <string name="error_invalid_password">Пароль слишком короткий</string>
    <string name="error_incorrect_password">Неверный пароль</string>
    <string name="error_field_required">Обязательное поле</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main_menu">Главное меню</string>
    <string name="journal_title">Выбор даты:</string>
    <string name="image_description">Изображение</string>
</resources>
